# solare_backup

Desktop/solare/: .gitignore  Procfile  README.md  index.html
Desktop/solare/backend/: Cargo.toml
Desktop/solare/backend/backend/: server-wallet.json  tajne za server wallet.txt
Desktop/solare/backend/src/: main.rs
Desktop/solare/static/: index.html
